se cambio un proyecto en el portfolio

--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
             </div>
         </div>
         <div class="card --tranlatea wow animate__animated animate__fadeInRight animate__delay-2s">
-            <a href="https://sushirocha.netlify.app/" target="_blank"> <img src="build/img/sushipng.webp" class="card-img-top" alt="Sushi"></a>
+            <a href="https://survivorstore.netlify.app/" target="_blank"> <img src="build/img/Captura de pantalla (2).webp" class="card-img-top" alt="Sushi"></a>
             <div class="card-body">
-                <h3 class="text-center">Sushi Rocha</h3>
+                <h3 class="text-center">Survivor Store</h3>
                 <div class="iconos">
-                    <a href="https://github.com/Exeq10/LandigPageSushi.git" target="_blank">
+                    <a href="https://github.com/Exeq10/DesarrolloWebCoder.git" target="_blank">
                         <div class="icon">
                             <img src="build/img/github_git_icon_145985.svg" alt="icon">
                         </div>
