se agregaron proyectos

--- a/index.html
+++ b/index.html
@@ -302,6 +302,62 @@
                 </div>
             </div>
         </div>
+        <div class="card --tranlatea wow animate__animated animate__fadeInRight animate__delay-1s">
+            <a href="https://rememberapp.netlify.app/" target="_blank"> <img src="build/img/simulador notas.png" class="card-img-top" alt="Login"></a>
+            <div class="card-body">
+                <h3 class="text-center">Simulador notas</h3>
+                <div class="iconos">
+                    <a href="https://github.com/Exeq10/Notas.js.git" target="_blank">
+                        <div class="icon">
+                            <img src="build/img/github_git_icon_145985.svg" alt="icon">
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+        <div class="card --tranlatea wow animate__animated animate__fadeInRight animate__delay-2s">
+            <a href="https://simuladorseguros.netlify.app/" target="_blank"> <img src="build/img/simulador seguros.png" class="card-img-top" alt="Login"></a>
+            <div class="card-body">
+                <h3 class="text-center">Simulador Seguros</h3>
+                <div class="iconos">
+                    <a href="https://github.com/Exeq10/Simulador-de-seguros.git" target="_blank">
+                        <div class="icon">
+                            <img src="build/img/github_git_icon_145985.svg" alt="icon">
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+        <div class="card --tranlatea wow animate__animated animate__fadeInRight animate__delay-3s">
+            <a href="https://simuladordegastos.netlify.app/" target="_blank"> <img src="build/img/simuladorgastos.png" class="card-img-top" alt="Login"></a>
+            <div class="card-body">
+                <h3 class="text-center">Simulador de Gastos</h3>
+                <div class="iconos">
+                    <a href="#" target="_blank">
+                        <div class="icon">
+                            <img src="build/img/github_git_icon_145985.svg" alt="icon">
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+        <div class="card --tranlatea wow animate__animated animate__fadeInRight animate__delay-4s">
+            <a href="https://simuladordemail.netlify.app/" target="_blank"> <img src="build/img/simulador email.png" class="card-img-top" alt="Login"></a>
+            <div class="card-body">
+                <h3 class="text-center">Simulador Email</h3>
+                <div class="iconos">
+                    <a href="https://github.com/Exeq10/SimuladorFormulario.git" target="_blank">
+                        <div class="icon">
+                            <img src="build/img/github_git_icon_145985.svg" alt="icon">
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
 
 
 
