--- a/deploy/index.html
+++ b/deploy/index.html
@@ -110,7 +110,7 @@
                 <p>-Lily Tomlin</p>
             </div>
 
-            <a class="cv  wow animate__animated animate__fadeInUp animate__delay-2s" href="/build/cv/CV_2022-01-27-101437.pdf" download="Curriculum Vitae Exequiel Schiavo">CV <img src="build/img/download_simple_icon_174543.svg" alt="descargar cv"></a>
+            <a class="cv  wow animate__animated animate__fadeInUp animate__delay-2s" href="/build/cv/CV-L.E-Schiavo.pdf" download="Curriculum Vitae Exequiel Schiavo">CV <img src="build/img/download_simple_icon_174543.svg" alt="descargar cv"></a>
         </section>
 
 
